Bug 927796.  Make sure we don't end up with options in a bogus state where their DefaultSelected() doesn't match mIsSelected but they think their mIsSelected value hasn't changed from the default.  r=sicking